# printer-nebula-firmware

./: README.md  create.sh  get-version.py  pyproject.toml
.github/workflows/: check-release.yaml
etc/init.d/: S58factoryreset
